# sygnals

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml  requirements.txt  run_tests.sh  setup.py
docs/: dev_spec_v1.0.0.md  dev_spec_v1.5.0.md  developing_plugin.md  developing_plugins.md  usage.md
plugins/: custom_filter.py
plugins_contrib/sygnals-hdf5/: plugin.toml  pyproject.toml
plugins_contrib/sygnals-hdf5/sygnals_hdf5/: __init__.py  hdf5_io.py  plugin.py
plugins_contrib/sygnals-parquet/: plugin.toml  pyproject.toml
plugins_contrib/sygnals-parquet/sygnals_parquet/: __init__.py  parquet_io.py  plugin.py
sygnals/: cli.py  version.py
sygnals/cli/: augment_cmd.py  base_cmd.py  features_cmd.py  main.py  plugin_cmd.py  save_cmd.py  segment_cmd.py
sygnals/config/: __init__.py  loaders.py  models.py
sygnals/core/: __init__.py  audio_handler.py  batch_processor.py  custom_exec.py  data_handler.py  dsp.py  filters.py  plugin_manager.py  segmentation.py  storage.py  transforms.py
sygnals/core/audio/: __init__.py  features.py  io.py
sygnals/core/audio/effects/: __init__.py  chorus.py  compression.py  delay.py  equalizer.py  flanger.py  pitch_shift.py  reverb.py  time_stretch.py  tremolo.py  utility.py
sygnals/core/augment/: __init__.py  effects_based.py  noise.py
sygnals/core/features/: __init__.py  cepstral.py  frequency_domain.py  manager.py  time_domain.py
sygnals/core/ml_utils/: __init__.py  formatters.py  scaling.py
sygnals/plugins/: __init__.py  api.py  custom_filter.py  example_plugin.py  loader.py  scaffold.py
sygnals/utils/: __init__.py  helpers.py  logging_config.py  visualizations.py
tests/: __init__.py  generate_test_wav_file.py  test_audio_effects.py  test_audio_features.py  test_audio_io.py  test_augment.py  test_batch_processor.py  test_cli.py  test_cli_augment.py  test_cli_features.py  test_cli_save.py  test_cli_segment.py  test_custom_exec.py  test_data_handler.py  test_dsp.py  test_features_cepstral.py  test_features_freq.py  test_features_manager.py  test_features_time.py  test_filters.py  test_math_.py  test_ml_utils.py  test_plugin_manager.py  test_plugin_system.py  test_segmentation.py  test_storage.py  test_transforms.py  test_visualizations.py
tests/data/: test_signal.csv  test_signal.json
tools/: frequencies.py
