# pyproject.toml for the 'sygnals-parquet' Sygnals plugin

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sygnals-parquet"
version = "0.1.0" # Should match plugin.toml
description = "Adds support for reading and writing Apache Parquet files." # Should match plugin.toml
# readme = "README.md" # Optional
authors = [
   { name="Sygnals Contributor", email="email@example.com" }, # Add your details
]
license = { text="Apache-2.0" } # Or choose another license
requires-python = ">=3.8" # Match Sygnals core requirement
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License", # Match license choice
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
keywords = ["sygnals", "plugin", "parquet", "data handling"]

# --- Plugin Dependencies ---
dependencies = [
    # Requires pandas and pyarrow (or fastparquet) for Parquet I/O
    "pandas>=1.3.0", # Specify a reasonable minimum pandas version
    "pyarrow>=7.0.0", # PyArrow is commonly used with pandas for Parquet
    # "fastparquet" # Alternatively, could use fastparquet
]

# [project.urls] # Optional

# --- Entry Point for Sygnals Plugin Discovery ---
[project.entry-points."sygnals.plugins"]
sygnals-parquet = "sygnals_parquet.plugin:SygnalsParquetPlugin"
